# aishaala-backend

./: .gitignore  pyproject.toml
src/admin/: __init__.py  auth.py  orgs_admin.py  user_admin.py
src/aishaala_backend/: app.py  main.py  settings.py
src/models/: __init__.py  knowledge.py  orgs.py  users.py
src/routes/: user.py
src/schemas/: user.py
src/services/: __init__.py  cache.py  db.py
src/utils/: sms.py
